--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="terminal-button yellow"></div>
                 <div class="terminal-button green"></div>
             </div>
-            <div class="glitch" data-text="user@cyberterminal:~">user@cyberterminal:~</div>
+            <div class="glitch" data-text="user@cyberterminal:~">subfare@portfolio:~</div>
             <div class="terminal-buttons">
                 <div style="width: 20px;"></div>
             </div>
@@ -299,8 +299,8 @@
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
         
-        const katakana = 'アァカサタナハマヤャラワガザダバパイィキシチニヒミリヰギジヂビピウゥクスツヌフムユュルグズブヅプエェケセテネヘメレヱゲゼデベペオォコソトノホモヨョロヲゴゾドボポヴッン';
-        const latin = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+        const katakana = 'SUBFARESUBFARESUBFARESUSUBFARESUBFARESUBFARESUBFAREBFARESUBFARESUBFARESUBFARESUBFARE';
+        const latin = 'SUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARESUBFARE';
         const nums = '0123456789';
         const symbols = '!"#$%&\'()*+,-./:;<=>?@[\\]^_`{|}~';
         const binary = '01';
