--- a/index.html
+++ b/index.html
@@ -342,28 +342,28 @@
         const commandInput = document.getElementById('command-input');
         
         const messages = [
-            { text: "Initializing system...", delay: 50 },
-            { text: "Loading profile data...", delay: 50 },
+            { text: "Loading Portfolio...", delay: 50 },
+            { text: "Loading portfolio data...", delay: 50 },
             { text: "██████████████ 100%", delay: 30, style: "color: #0ff" },
             { text: "\n", delay: 200 },
-            { text: "> Welcome to CYBER TERMINAL // ACCESS GRANTED", delay: 10, style: "color: #0f0; font-weight: bold" },
+            { text: "> Welcome to SUBFARE PORTFOLIO // ACCESS GRANTED", delay: 10, style: "color: #0f0; font-weight: bold" },
             { text: "\n\n", delay: 100 },
             { text: ">> SYSTEM USER PROFILE <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
             { text: "\n", delay: 100 },
             { text: "> NAME: ", delay: 20 },
-            { text: "NZ03", delay: 100, style: "color: #0ff; font-weight: bold" },
+            { text: "SUBFRE", delay: 100, style: "color: #9e0cc7; font-weight: bold" },
             { text: "", delay: 100, style: "color: #0f0; font-weight: bold" },
             { text: "\n", delay: 50 },
             { text: "> TITLE: ", delay: 20 },
-            { text: "FULL-STACK CYBER DEVELOPER", delay: 50, style: "color: #0ff" },
+            { text: "GRAPHIC DESIGNER", delay: 50, style: "color: #9e0cc7" },
             { text: "\n", delay: 50 },
             { text: "> LOCATION: ", delay: 20 },
-            { text: "[DATA ENCRYPTED]", delay: 70, style: "color: #f44" },
+            { text: "[DATA ENCRYPTED, jk... NORWAY!!!!]", delay: 70, style: "color: #f44" },
             { text: "\n", delay: 50 },
             { text: "> STATUS: ", delay: 20 },
-            { text: "ACTIVE // SECURITY CLEARANCE: DELTA", delay: 50, style: "color: #0f0" },
+            { text: "BUSY // SCHOOL & WORK", delay: 50, style: "color: #0f0" },
             { text: "\n\n", delay: 100 },
-            { text: ">> SKILL MATRIX <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
+            { text: ">> SKILLS <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
             { text: "\n", delay: 100 },
             { text: "> PYTHON: ", delay: 20 },
             { text: "██████████ 95%", delay: 30, style: "color: #0ff" },
