--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         
         const messages = [
             { text: "Loading Portfolio... ", delay: 50 },
-            { text: "Loading portfolio data... ", delay: 50 },
+            { text: "Loading work data... ", delay: 50 },
             { text: "██████████████ 100%", delay: 30, style: "color: #0ff" },
             { text: "\n", delay: 200 },
             { text: "> Welcome to SUBFARE PORTFOLIO // ACCESS GRANTED", delay: 10, style: "color: #0f0; font-weight: bold" },
@@ -351,11 +351,11 @@
             { text: ">> SYSTEM USER PROFILE <<", delay: 10, style: "color: #b19cd9; text-decoration: underline" },
             { text: "\n", delay: 100 },
             { text: "> NAME: ", delay: 20 },
-            { text: "SUBFRE", delay: 100, style: "color: #9e0cc7; font-weight: bold" },
+            { text: "SUBFARE", delay: 100, style: "color: #d336ff; font-weight: bold" },
             { text: "", delay: 100, style: "color: #0f0; font-weight: bold" },
             { text: "\n", delay: 50 },
             { text: "> TITLE: ", delay: 20 },
-            { text: "GRAPHIC DESIGNER", delay: 50, style: "color: #9e0cc7" },
+            { text: "GRAPHIC DESIGNER", delay: 50, style: "color: #d336ff" },
             { text: "\n", delay: 50 },
             { text: "> LOCATION: ", delay: 20 },
             { text: "[DATA ENCRYPTED, jk... NORWAY!!!!]", delay: 70, style: "color: #f44" },
