--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             height: 70vh;
             background: var(--terminal-bg);
             border-radius: 8px;
-            box-shadow: 0 0 30px rgba(0, 255, 0, 0.5),
+            box-shadow: 0 0 30px #d336ff,
                         inset 0 0 10px rgba(0, 255, 0, 0.2);
             overflow: hidden;
             border: 1px solid var(--terminal-green);
